Fix temporaire du burger menu
Le menu est invisible de base et se révèle après un click sur le bouton. Mais il reste visible quand on change de page si on ne la recharge pas

--- a/SpQRt/client/main.css
+++ b/SpQRt/client/main.css
@@ -17,21 +17,6 @@ body {
   z-index: 1;
 }
 
-.button-recherche {
-  background-color: #eee;
-  color: #444;
-  cursor: pointer;
-  padding: 10px;
-  width: 110px;
-  border: none;
-  outline: none;
-  transition: 0.4s;
-  position: fixed;
-  margin-top: 40px;
-  vertical-align:top;
-  z-index: 1;
-}
-
 .button-map {
   background-color: #eee;
   color: #444;
@@ -40,11 +25,11 @@ body {
   width: 110px;
   border: none;
   outline: none;
-  transition: 0.4s;
   position: fixed;
   margin-top: 40px;
   vertical-align:top;
   z-index: 1;
+  visibility: hidden;
 }
 
 .button-entrainements {
@@ -55,11 +40,11 @@ body {
   width: 110px;
   border: none;
   outline: none;
-  transition: 0.4s;
   position: fixed;
   margin-top: 90px;
   vertical-align:top;
   z-index: 1;
+  visibility: hidden;
 }
 
 .button-profil {
@@ -70,11 +55,11 @@ body {
   width: 110px;
   border: none;
   outline: none;
-  transition: 0.4s;
   position: fixed;
   margin-top: 140px;
   vertical-align:top;
   z-index: 1;
+  visibility: hidden;
 }
 
 .button-contact {
@@ -85,11 +70,11 @@ body {
   width: 110px;
   border: none;
   outline: none;
-  transition: 0.4s;
   position: fixed;
   margin-top: 190px;
   vertical-align:top;
   z-index: 1;
+  visibility: hidden;
 }
 
 .button-apropos {
@@ -100,11 +85,15 @@ body {
   width: 110px;
   border: none;
   outline: none;
-  transition: 0.4s;
   position: fixed;
   margin-top: 240px;
   vertical-align:top;
   z-index: 1;
+  visibility: hidden;
+}
+
+.visible {
+  visibility: visible;
 }
 
 .hidden {
@@ -162,6 +151,14 @@ body {
 .SpQRt {
   text-align: center;
 }
+
+/* .btn-group button {
+  background-color: white;
+  border: 2px solid black;
+  color: black;
+  padding: 10px 24px;
+  cursor: pointer;
+} */
 
 .contenu {
   text-align: center;
